--- a/resources/index.html
+++ b/resources/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8">
    <title>React-Cljs</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+   <script type="text/javascript">goog.require("guestbook.core");</script>
 </head>
 
 <body>
