--- a/resources/index.html
+++ b/resources/index.html
@@ -3,11 +3,24 @@
 <head>
    <meta charset="utf-8">
    <title>React-Cljs</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 
-<body>
-  <div id = "app"> </div>
-  <script src="/static/js/app.js"></script>
+  <body>
+    <div id="app"></div>
+    <!-- ATTENTION \/ -->
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!-- datepicker -->
+    <link
+       rel="stylesheet"
+       href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css">
+    <script
+       src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+    <!-- ATTENTION /\ -->
+    <script src="/static/js/app.js"></script>
   </body>
+
 </html>
